# rag-observability-layer

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPEC.md  pricing.json  pyproject.toml  requirements.txt
.github/: SECURITY.md
.github/workflows/: monitor.yml  publish.yml
data/golden_dataset/: dataset.jsonl
docs/: DESIGN.md
infra/: docker-compose.yml
infra/grafana/dashboards/: dashboards.yml  rag-dashboard.json
infra/prometheus/: prometheus.yml
monitoring/: __init__.py  config.py  extensions.py  metrics.py  prompts.py  tracing.py  wrappers.py
scripts/: check_regressions.py  demo_observability.py  record_baseline.py  start_monitoring_stack.sh  verify_gate.py  verify_infra.py
tests/: conftest.py  test_extensions.py  test_metrics.py  test_prompts.py  test_regression_checker.py  test_tracing.py  test_wrappers.py
