[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-observability-layer"
version = "0.1.0"
description = "Production-grade monitoring and observability layer for RAG pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashok Kumar", email = "vashokkumar2012001@gmail.com" }]
keywords = ["rag", "observability", "langfuse", "opentelemetry", "llm", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.12"
dependencies = [
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "prometheus-client>=0.18.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["monitoring*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["monitoring", "scripts"]
omit = ["tests/*", ".venv/*", "scripts/verify_gate.py", "scripts/demo_observability.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 140
target-version = "py312"
src = ["monitoring", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
exclude = ["tests/", "data/"]
